# gwendolen-ros-curiosity

./: README.md
curiosity_mars_rover_description/: CMakeLists.txt  package.xml
curiosity_mars_rover_description/action/: CuriosityArm.action  CuriosityWheels.action
curiosity_mars_rover_description/launch/: curiosity_mars_rover_spawn.launch  curiosity_mars_rover_start.launch  curiosity_mars_rover_systems.launch  main_real_mars.launch  main_real_moon.launch  main_simple.launch  mars_curiosity_simple_world.launch  mars_curiosity_world.launch  moon_curiosity_world.launch  rosbridge.launch  tetris_world.launch
curiosity_mars_rover_description/launch/include/: gazebo.launch.xml
curiosity_mars_rover_description/models/apollo15/: model.sdf
curiosity_mars_rover_description/msg/: Move3.msg
curiosity_mars_rover_description/scripts/: arm_client.py  arm_server.py  mast_client.py  mast_server.py  wheels_client.py  wheels_server.py
curiosity_mars_rover_description/urdf/: curiosity_mars_rover.gazebo
curiosity_mars_rover_description/worlds/: apollo15_landing_site.world  mars_curiosity (copy).world  mars_curiosity.world  moon_curiosity.world
src/examples/gwendolen/ros/curiosity/inspection/: RosEnv.java  curiosity.ail  curiosity.gwen
